[package]
name = "img-decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
zune-core = "0.4.12"
zune-jpeg = "0.4.14"
