[package]
name = "img-decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
#zune-core = "0.4.12"
#zune-jpeg = "0.4.14"
zune-jpeg = { path = "./zune-jpeg", version = "0.4.14" }
zune-core = { path = "./zune-core", version = "0.4.11" }


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3 # Optimize for speed.
lto = true
codegen-units = 1
target-feature="+simd128"

#[build.rustflags]
#RUSTFLAGS="-C target-feature=+simd128"